Export model for Pi

--- a/DEXI_YOLO_Training.ipynb
+++ b/DEXI_YOLO_Training.ipynb
@@ -2,31 +2,119 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "header",
    "metadata": {},
-   "source": "# DEXI YOLO Training Tutorial - Local Environment\\n\\nThis notebook walks you through the complete process of training a custom YOLO object detection model for drone detection on your local machine. We'll be working with 6 classes: bird, dog, cat, motorcycle, car, and truck.\\n\\n## 📋 Table of Contents\\n1. [Environment Setup](#1-environment-setup)\\n2. [Dataset Exploration](#2-dataset-exploration)\\n3. [Data Augmentation](#3-data-augmentation)\\n4. [YOLO Training](#4-yolo-training)\\n5. [Results Analysis](#5-results-analysis)\\n6. [Model Testing](#6-model-testing)\\n7. [ONNX Conversion](#7-onnx-conversion)\\n\\n---\""
+   "source": [
+    "# DEXI YOLO Training Tutorial - Local Environment\n",
+    "\n",
+    "This notebook walks you through the complete process of training a custom YOLO object detection model for drone detection on your local machine. We'll be working with 6 classes: bird, dog, cat, motorcycle, car, and truck.\n",
+    "\n",
+    "## 📋 Table of Contents\n",
+    "1. [Environment Setup](#environment-setup)\n",
+    "2. [Dataset Exploration](#dataset-exploration) \n",
+    "3. [Data Augmentation](#data-augmentation)\n",
+    "4. [YOLO Training](#yolo-training)\n",
+    "5. [Results Analysis](#results-analysis)\n",
+    "6. [Model Testing](#model-testing)\n",
+    "7. [ONNX Conversion](#onnx-conversion)\n",
+    "\n",
+    "---"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "env-setup",
    "metadata": {},
-   "source": "## 1. Environment Setup\\n\\nFirst, let's make sure we have all the required packages installed and import the necessary libraries.\\n\\n**Prerequisites:**\\n- Python 3.8+\\n- Virtual environment activated\\n- All dependencies installed: `pip install -r requirements.txt`\""
+   "source": [
+    "## 1. Environment Setup\n",
+    "\n",
+    "First, let's make sure we have all the required packages installed and import the necessary libraries.\n",
+    "\n",
+    "**Prerequisites:**\n",
+    "- Python 3.8+\n",
+    "- Virtual environment activated\n",
+    "- All dependencies installed: `pip install -r requirements.txt`"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "install-deps",
    "metadata": {},
    "outputs": [],
-   "source": "# Install required packages (only run if packages are not installed)\\n# Make sure you've activated your virtual environment first!\\n!pip install -r requirements.txt\""
+   "source": [
+    "# Install required packages (only run if packages are not installed)\n",
+    "# Make sure you've activated your virtual environment first!\n",
+    "!pip install -r requirements.txt"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "imports",
    "metadata": {},
    "outputs": [],
-   "source": "# Import required libraries and check hardware acceleration\\nimport os\\nimport cv2\\nimport numpy as np\\nimport matplotlib.pyplot as plt\\nfrom pathlib import Path\\nimport yaml\\nfrom ultralytics import YOLO\\nimport torch\\nfrom IPython.display import Image, display\\nimport pandas as pd\\nfrom glob import glob\\n\\n# Set matplotlib style for better plots\\nplt.style.use('seaborn-v0_8')\\nplt.rcParams['figure.figsize'] = (12, 8)\\n\\nprint(f\\\"🔧 System Information:\\\")\\nprint(f\\\"   PyTorch version: {torch.__version__}\\\")\\nprint(f\\\"   CUDA available: {torch.cuda.is_available()}\\\")\\nprint(f\\\"   MPS available: {torch.backends.mps.is_available() if hasattr(torch.backends, 'mps') else 'Not available'}\\\")\\nprint(f\\\"   MPS built: {torch.backends.mps.is_built() if hasattr(torch.backends, 'mps') else 'Not available'}\\\")\\n\\n# 🚀 Device Selection (Optimized for Apple Silicon MPS)\\nif torch.cuda.is_available():\\n    device = 'cuda'\\n    gpu_name = torch.cuda.get_device_name(0)\\n    print(f\\\"\\\\n🚀 Using NVIDIA GPU: {gpu_name}\\\")\\nelif hasattr(torch.backends, 'mps') and torch.backends.mps.is_available():\\n    device = 'mps'\\n    print(f\\\"\\\\n⚡ Using Apple Silicon MPS acceleration!\\\")\\n    print(f\\\"   This will provide 4-8x speedup over CPU\\\")\\n    print(f\\\"   Expected training time: 30-45 minutes\\\")\\n    \\n    # Clear MPS cache for optimal performance\\n    if torch.backends.mps.is_built():\\n        torch.mps.empty_cache()\\nelse:\\n    device = 'cpu'\\n    print(f\\\"\\\\n💻 Using CPU (slower but works everywhere)\\\")\\n    print(f\\\"   Expected training time: 2-4 hours\\\")\\n    print(f\\\"   💡 For faster training, use GPU or Apple Silicon Mac\\\")\\n\\nprint(f\\\"\\\\n✅ Selected device: {device}\\\")\""
+   "source": [
+    "# Import required libraries and check hardware acceleration\n",
+    "import os\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from pathlib import Path\n",
+    "import yaml\n",
+    "from ultralytics import YOLO\n",
+    "import torch\n",
+    "from IPython.display import Image, display\n",
+    "import pandas as pd\n",
+    "from glob import glob\n",
+    "\n",
+    "# Set matplotlib style for better plots\n",
+    "plt.style.use('default')\n",
+    "plt.rcParams['figure.figsize'] = (12, 8)\n",
+    "\n",
+    "print(f\"🔧 System Information:\")\n",
+    "print(f\"   PyTorch version: {torch.__version__}\")\n",
+    "print(f\"   CUDA available: {torch.cuda.is_available()}\")\n",
+    "print(f\"   MPS available: {torch.backends.mps.is_available() if hasattr(torch.backends, 'mps') else 'Not available'}\")\n",
+    "print(f\"   MPS built: {torch.backends.mps.is_built() if hasattr(torch.backends, 'mps') else 'Not available'}\")\n",
+    "\n",
+    "# 🚀 Device Selection (Optimized for Apple Silicon MPS)\n",
+    "if torch.cuda.is_available():\n",
+    "    device = 'cuda'\n",
+    "    gpu_name = torch.cuda.get_device_name(0)\n",
+    "    print(f\"\\n🚀 Using NVIDIA GPU: {gpu_name}\")\n",
+    "elif hasattr(torch.backends, 'mps') and torch.backends.mps.is_available():\n",
+    "    device = 'mps'\n",
+    "    print(f\"\\n⚡ Using Apple Silicon MPS acceleration!\")\n",
+    "    print(f\"   This will provide 4-8x speedup over CPU\")\n",
+    "    print(f\"   Expected training time: 30-45 minutes\")\n",
+    "    \n",
+    "    # Clear MPS cache for optimal performance\n",
+    "    if torch.backends.mps.is_built():\n",
+    "        torch.mps.empty_cache()\n",
+    "else:\n",
+    "    device = 'cpu'\n",
+    "    print(f\"\\n💻 Using CPU (slower but works everywhere)\")\n",
+    "    print(f\"   Expected training time: 2-4 hours\")\n",
+    "    print(f\"   💡 For faster training, use GPU or Apple Silicon Mac\")\n",
+    "\n",
+    "print(f\"\\n✅ Selected device: {device}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dataset-exploration",
+   "metadata": {},
+   "source": [
+    "## 2. Dataset Exploration\n",
+    "\n",
+    "Let's explore our dataset structure and examine the original images before augmentation."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "explore-dataset",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,6 +164,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "data-augmentation",
    "metadata": {},
    "source": [
     "## 3. Data Augmentation\n",
@@ -86,6 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "augmentation-overview",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,6 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "augmentation-config",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,6 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "run-augmentation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,6 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "verify-augmentation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,6 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "show-augmented-samples",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,6 +315,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "yolo-training",
    "metadata": {},
    "source": [
     "## 4. YOLO Training\n",
@@ -231,6 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "training-config",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,6 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "load-model",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,15 +374,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "train-model",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Start training\n",
     "print(\"🚀 Starting YOLO training...\")\n",
     "print(\"This will take some time. You can monitor the progress below.\")\n",
-    "print(\"Training logs and checkpoints will be saved in 'runs/detect/drone_detection/\")\n",
+    "print(\"Training logs and checkpoints will be saved in 'runs/detect/drone_detection/'\")\n",
     "\n",
-    "# Train the model\n",
+    "# Train the model using the parameters from train_yolo.py\n",
     "results = model.train(\n",
     "    data='dataset.yaml',\n",
     "    epochs=TRAINING_CONFIG['epochs'],\n",
@@ -333,6 +431,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "results-analysis",
    "metadata": {},
    "source": [
     "## 5. Results Analysis\n",
@@ -343,11 +442,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "check-results",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Check if training results exist\n",
-    "results_dir = Path('runs/detect/drone_detection3')\n",
+    "results_dir = Path('runs/detect/drone_detection4')\n",
     "if results_dir.exists():\n",
     "    print(f\"📂 Training results saved in: {results_dir}\")\n",
     "    print(f\"📁 Contents:\")\n",
@@ -363,6 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "show-training-curves",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,6 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "show-confusion-matrix",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,6 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "show-validation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,6 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "final-validation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,6 +545,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "model-testing",
    "metadata": {},
    "source": [
     "## 6. Model Testing\n",
@@ -451,6 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "test-model",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,6 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "custom-test-function",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,6 +628,10 @@
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "    \n",
+    "    # Load dataset config to get class names\n",
+    "    with open('dataset.yaml', 'r') as f:\n",
+    "        dataset_config = yaml.safe_load(f)\n",
+    "    \n",
     "    # Print detection details\n",
     "    if len(results[0].boxes) > 0:\n",
     "        print(\"\\n🎯 Detections:\")\n",
@@ -538,6 +649,59 @@
   },
   {
    "cell_type": "markdown",
+   "id": "onnx-conversion",
+   "metadata": {},
+   "source": [
+    "## 7. ONNX Conversion for Deployment\n",
+    "\n",
+    "Now let's convert our trained PyTorch model to ONNX format for efficient deployment on devices like Raspberry Pi."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08d9fb43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert model to ONNX format optimized for Pi deployment\n",
+    "from convert_to_onnx import convert_model_to_onnx\n",
+    "\n",
+    "if 'best_model_path' in locals() and best_model_path.exists():\n",
+    "    print(\"🚀 Converting trained model to ONNX...\")\n",
+    "    \n",
+    "    # Convert with 320x320 input size (optimal for Pi camera 320x240)\n",
+    "    onnx_path = convert_model_to_onnx(\n",
+    "        model_path=str(best_model_path),\n",
+    "        imgsz=320,  # Optimized for Pi camera\n",
+    "        half=False,  # Keep FP32 for better Pi compatibility\n",
+    "        simplify=True\n",
+    "    )\n",
+    "    \n",
+    "    if onnx_path:\n",
+    "        print(f\"\\n✅ ONNX conversion successful!\")\n",
+    "        print(f\"📁 ONNX model saved: {onnx_path}\")\n",
+    "        print(f\"🥧 Ready for Raspberry Pi deployment!\")\n",
+    "        \n",
+    "        # Test the ONNX model\n",
+    "        try:\n",
+    "            import onnxruntime as ort\n",
+    "            session = ort.InferenceSession(onnx_path)\n",
+    "            print(f\"\\n🔍 ONNX Model Info:\")\n",
+    "            print(f\"   Input shape: {session.get_inputs()[0].shape}\")\n",
+    "            print(f\"   Output shape: {session.get_outputs()[0].shape}\")\n",
+    "            print(f\"   Providers: {ort.get_available_providers()}\")\n",
+    "        except ImportError:\n",
+    "            print(f\"\\n⚠️  Install onnxruntime to test: pip install onnxruntime\")\n",
+    "    else:\n",
+    "        print(\"❌ ONNX conversion failed\")\n",
+    "else:\n",
+    "    print(\"❌ No trained model found. Please complete training first.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "conclusion",
    "metadata": {},
    "source": [
     "## 🎉 Congratulations!\n",
@@ -551,6 +715,7 @@
     "4. **YOLO Training**: Trained a custom YOLOv8 model on your 6-class dataset\n",
     "5. **Results Analysis**: Evaluated model performance with metrics and visualizations\n",
     "6. **Model Testing**: Tested the trained model on sample images\n",
+    "7. **ONNX Conversion**: Converted the model for Pi deployment\n",
     "\n",
     "### 📁 Important Files Created:\n",
     "- `runs/detect/drone_detection/weights/best.pt` - Your best trained model\n",
@@ -578,10 +743,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "final-summary",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Final summary cell\n",
+    "# Final summary\n",
     "print(\"🎊 TUTORIAL COMPLETED SUCCESSFULLY! 🎊\")\n",
     "print(\"\")\n",
     "print(\"Your YOLO model is now trained and ready to use!\")\n",
@@ -602,18 +768,6 @@
     "print(\"results[0].show()\")\n",
     "print(\"```\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "source": "## 7. ONNX Conversion for Deployment\\n\\nNow let's convert our trained PyTorch model to ONNX format for efficient deployment on devices like Raspberry Pi.\"",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "source": "# Convert model to ONNX format optimized for Pi deployment\\nfrom convert_to_onnx import convert_model_to_onnx\\n\\nif 'best_model_path' in locals() and best_model_path.exists():\\n    print(\\\"🚀 Converting trained model to ONNX...\\\")\\n    \\n    # Convert with 320x320 input size (optimal for Pi camera 320x240)\\n    onnx_path = convert_model_to_onnx(\\n        model_path=str(best_model_path),\\n        imgsz=320,  # Optimized for Pi camera\\n        half=False,  # Keep FP32 for better Pi compatibility\\n        simplify=True\\n    )\\n    \\n    if onnx_path:\\n        print(f\\\"\\\\n✅ ONNX conversion successful!\\\")\\n        print(f\\\"📁 ONNX model saved: {onnx_path}\\\")\\n        print(f\\\"🥧 Ready for Raspberry Pi deployment!\\\")\\n        \\n        # Test the ONNX model\\n        try:\\n            import onnxruntime as ort\\n            session = ort.InferenceSession(onnx_path)\\n            print(f\\\"\\\\n🔍 ONNX Model Info:\\\")\\n            print(f\\\"   Input shape: {session.get_inputs()[0].shape}\\\")\\n            print(f\\\"   Output shape: {session.get_outputs()[0].shape}\\\")\\n            print(f\\\"   Providers: {ort.get_available_providers()}\\\")\\n        except ImportError:\\n            print(f\\\"\\\\n⚠️  Install onnxruntime to test: pip install onnxruntime\\\")\\n    else:\\n        print(\\\"❌ ONNX conversion failed\\\")\\nelse:\\n    print(\\\"❌ No trained model found. Please complete training first.\\\")\"",
-   "metadata": {},
-   "execution_count": null,
-   "outputs": []
   }
  ],
  "metadata": {
@@ -636,5 +790,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
